added confetti and some style changes

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/material": "^6.1.10",
     "axios": "^1.7.7",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
