--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "tsc"
+    "build": "npm install && npm start"
   },
   "author": "",
   "license": "ISC",
