--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^3.3.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
