--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material": "^6.1.10",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
     "@next/bundle-analyzer": "^15.1.2",
-    "axios": "^1.7.7",
+    "axios": "^1.8.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
-    "tailwindcss": "^4.0.14",
     "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4",
+    "tailwindcss": "^4.0.14",
+    "typescript": "^5.8.2"
   }
 }
